# MapFinBen

./: .env.example  .gitignore  LICENSE  Makefile  MapFinBen_competition_introduction.md  README.md  pyproject.toml
data/: README.md
data/CroFinAS/: CroFinAS_train.json  CroFinAS_valid.json
data/CroFinSA/: CroFinSA_valid.json
data/CroFinTC/: CroFinTC_valid.json
main/script/: run.bat  run.sh
main/src/: chatlm.py  eval.py  evaluator.py  interface.py  service.py  utils.py
main/src/factscore_package/: clm.py  lm.py
main/src/financial_evaluation/lm_eval/: base.py
main/src/financial_evaluation/lm_eval/models/: anthropic_llms.py  dummy.py  gpt2.py  gpt3.py  huggingface.py  textsynth.py
main/src/financial_evaluation/lm_eval/tasks/: __init__.py  anli.py  arc.py  arithmetic.py  asdiv.py  babi.py  bigbench.py  blimp.py  cbt.py  ceval.py  cmmlu.py  coqa.py  crowspairs.py  csatqa.py  drop.py  glue.py  gsm8k.py  haerae.py  headqa.py  hellaswag.py  hendrycks_ethics.py  hendrycks_math.py  hendrycks_test.py  json.py  lambada.py  lambada_cloze.py  logiqa.py  mathqa.py  mc_taco.py  mgsm.py  mutual.py  naturalqs.py  openbookqa.py  pawsx.py  pile.py  piqa.py  prost.py  pubmedqa.py  qa4mre.py  qasper.py  (+19 more)
main/src/financial_evaluation/scripts/: cost_estimate.py  get_prompts.py  make_table_results.py  make_table_tasks.py  regression.py  write_out.py
main/src/financial_evaluation/templates/: new_multiple_choice_task.py  new_task.py
main/src/financial_evaluation/tests/: test_description_dict.py  test_evaluator.py  test_generate_13_grams.py  test_utils.py
main/src/metrics/: qa.py
main/src/tasks/: __init__.py  mapfin.py  zhutils.py
